--- a/app/src/main/res/layout/item_posts.xml
+++ b/app/src/main/res/layout/item_posts.xml
@@ -31,6 +31,16 @@
         android:textSize="16sp"
         tools:text="Content" />
 
+    <TextView
+        android:id="@+id/tv_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="group"
+        android:layout_margin="10dp"
+        android:textStyle="bold"
+        android:textSize="16dp"
+        android:textColor="@color/black" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
